<resources>
    <string name="app_name">AccountManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fullName">نام و نام خانوادگی:</string>
    <string name="faderName">نام پدر:</string>
    <string name="phoneNumber">شماره تلفن:</string>
    <string name="postcode">کد پستی:</string>
    <string name="register">ثبت اطلاعات</string>
    <string name="slider_desc">تعداد حساب هایی که مایل به ذخیره آن هستید:</string>
    <string name="messageError">\" فیلد اجباری \"</string>
    <string name="incorrectMessageError">لطفا شماره را صحیح وارد کنید</string>
    <string name="edit">ویرایش</string>
    <string name="createAccount">افزودن حساب</string>
    <string name="accountType">نوع حساب</string>
    <string name="accountNumber">شماره حساب</string>
    <string name="accountStock">"موجودی "</string>
    <string name="account">پروفایل</string>
    <string name="showAccounts">حساب ها</string>
    <string name="selectAccount">انتخاب حساب</string>
    <string name="deleteAll">حذف همه حساب ها</string>
    <string name="accountManager">مدیر حساب ها</string>
    <string name="enter_correct">لطفا شماره را صحیح وارد کنید!</string>
    <string name="choose">انتخاب کنید</string>
    <string name="noAccountYet">هنوز هیچ حسابی وارد نشده!</string>
    <string name="chooseAccount">انتخاب حساب</string>
</resources>