<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/showProfileFragment"
        android:title="@string/account"
        android:icon="@drawable/ic_baseline_person_24"/>

    <item
        android:id="@+id/createAccountFragment"
        android:title="@string/createAccount"
        android:icon="@drawable/ic_baseline_add_24"/>

    <item
        android:id="@+id/showAccountFragment"
        android:title="@string/showAccounts"
        android:icon="@drawable/ic_baseline_account_balance_24"/>

    <item
        android:id="@+id/chooseAccountFragment"
        android:title="@string/selectAccount"
        android:icon="@drawable/ic_baseline_find_in_page_24"/>

    <item
        android:id="@+id/deleteAllAccountBtn"
        android:title="@string/deleteAll"
        android:icon="@drawable/ic_baseline_delete_24"/>
</menu>