<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_gray"
    tools:context=".profile.EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edt"
                android:hint="@string/fullName"
                style="@style/textFiledStyle.editText" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fatherName_edt"
                android:hint="@string/faderName"
                style="@style/textFiledStyle.editText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="9"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/postcode_edt"
                android:hint="@string/postcode"
                android:inputType="numberDecimal"
                style="@style/textFiledStyle.editText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_phone_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumber_edt"
                style="@style/textFiledStyle.editText"
                android:inputType="phone"
                 />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            style="@style/textFiledStyle.editText"
            android:text="@string/slider_desc"
            android:gravity="bottom"
            android:padding="@dimen/paddingSize"/>
        <com.google.android.material.slider.Slider
            style="@style/textFiledStyle.editText"
            android:stepSize="1.0"
            android:contentDescription="@string/slider_desc"
            android:value="2.0"
            android:valueFrom="0.0"
            android:valueTo="10.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btn"
            style="@style/textFiledStyle.editText"
            android:text="@string/register"
            app:cornerRadius="10dp" />
    </LinearLayout>


</ScrollView>