<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?attr/colorSecondary"
    tools:context=".account.CreateAccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createAccount"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/box_accountType_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/accountType_edt"
                android:inputType="none"
                android:hint="@string/accountType"
                style="@style/textFiledStyle.editText" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:counterEnabled="true"
            app:counterMaxLength="13"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/accountNumber_edt"
                android:hint="@string/accountNumber"
                android:inputType="numberDecimal"
                style="@style/textFiledStyle.editText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stock_edt"
                android:hint="@string/accountStock"
                android:inputType="number"
                style="@style/textFiledStyle.editText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createAccount_btn"
            style="@style/textFiledStyle.editText.show"
            android:layout_marginTop="20dp"
            app:cornerRadius="5dp"
            android:text="@string/createAccount"/>
    </LinearLayout>

</ScrollView>