<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".account.SelectAccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseAccount"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:counterEnabled="true"
            app:counterMaxLength="13"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/accountNumber_edt_choose"
                android:hint="@string/accountNumber"
                android:inputType="numberDecimal"
                style="@style/textFiledStyle.editText" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/chooseAccount_btn"
            style="@style/textFiledStyle.editText.show"
            android:layout_marginTop="10dp"
            app:cornerRadius="5dp"
            android:text="@string/chooseAccount"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_chooseAccount_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            style="@style/textFiledStyle.editText.txvProfileStyle"
            android:text="@string/accountType" />

        <TextView
            android:id="@+id/txv_accountType_choose"
            style="@style/textFiledStyle.editText.show"
            android:text="@string/accountType" />

        <TextView
            style="@style/textFiledStyle.editText.txvProfileStyle"
            android:text="@string/accountNumber" />

        <TextView
            android:id="@+id/txv_accountNumber_choose"
            style="@style/textFiledStyle.editText.show"
            android:text="@string/accountNumber" />

        <TextView
            style="@style/textFiledStyle.editText.txvProfileStyle"
            android:text="@string/accountStock" />

        <TextView
            android:id="@+id/txv_accountStock_choose"
            style="@style/textFiledStyle.editText.show"
            android:text="@string/accountStock" />
    </LinearLayout>
    </LinearLayout>

</ScrollView>